[package]
name = "solexamp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[patch.crates-io]
solana-frozen-abi = { git = "https://github.com/ChorusOne/solana", branch = "program-test-178" }
solana-frozen-abi-macro = { git = "https://github.com/ChorusOne/solana", branch = "program-test-178" }
solana-program = { git = "https://github.com/ChorusOne/solana", branch = "program-test-178" }
solana-program-test = { git = "https://github.com/ChorusOne/solana", branch = "program-test-178" }
solana-sdk = { git = "https://github.com/ChorusOne/solana", branch = "program-test-178" }

[dependencies]
lido = { git = "https://github.com/ChorusOne/solido", rev = "bdfdbc677d9ff33f4e12cd01d9c1f24c31b30ae7" }
solana-sdk = "=1.7.8"
solana-program = "=1.7.8"
solana-program-test = "=1.7.8"
solana-frozen-abi = "=1.7.8"
solana-frozen-abi-macro = "=1.7.8"