[package]
name = "solexamp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[patch.crates-io]
solana-program = { git = "https://github.com/ChorusOne/solana", branch = "program-test-178" }

[dependencies]
lido = { git = "https://github.com/ChorusOne/solido", rev = "bdfdbc677d9ff33f4e12cd01d9c1f24c31b30ae7" }
solana-program = "=1.7.8"
